completed all CRUD functionalities without DB

--- a/views/post.ejs
+++ b/views/post.ejs
@@ -7,12 +7,13 @@
                     <h1 class="text-center">
                         <%= post.title %>
                     </h1>
+
+                    <h6 class="m-0 text-center"> By <%= post.name %>
+                    </h6>
                     <br>
-                    <h5 class="m-0 text-center"> By <%= post.name %>
-                    </h5>
                 </div>
                 <div class="col-md6">
-                    <p>
+                    <p class="text-center">
                         <%= post.content %>
                     </p>
                 </div>
