--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
                 <!-- Content to display when there is a search query -->
                 <p>Search results for: <%= query %>
                 </p>
-                <% } else if (posts && posts.length> 0) { %>
+                <% if (posts && posts.length> 0) { %>
                     <% posts.forEach(post=> { %>
                         <div class="col-md-4 mb-4">
                             <div class="card h-100 d-flex flex-column">
@@ -16,16 +16,64 @@
                                     <p class="card-text flex-grow-1">
                                         <%= post.description %>
                                     </p>
-                                    <div class="mt-auto">
-                                        <a href="post/<%= post.id %>" class="btn btn-primary btn-sm">Read More</a>
+                                    <div class="d-flex justify-content-start">
+                                        <a href="post/<%= post.id %>" class="mx-2 btn btn-primary btn-sm">Read More</a>
+                                        <a href="/edit/<%= post.id %>" class="btn btn-primary mx-2 btn-sm">Edit</a>
+                                        <button onclick="deletePost('<%= post.id %>')"
+                                            class="btn btn-danger btn-sm">Delete</button>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <% }); %>
                             <% } else { %>
-                                <p>No posts available.</p>
+                                <p>No posts found matching your query.</p>
                                 <% } %>
+                                    <% } else if (posts && posts.length> 0) { %>
+                                        <!-- Display all posts if no search query -->
+                                        <% posts.forEach(post=> { %>
+                                            <div class="col-md-4 mb-4">
+                                                <div class="card h-100 d-flex flex-column">
+                                                    <div class="card-body d-flex flex-column">
+                                                        <h5 class="card-title">
+                                                            <%= post.title %>
+                                                        </h5>
+                                                        <p class="card-text flex-grow-1">
+                                                            <%= post.description %>
+                                                        </p>
+                                                        <div class="d-flex justify-content-start">
+                                                            <a href="post/<%= post.id %>"
+                                                                class="mx-2 btn btn-primary btn-sm">Read More</a>
+                                                            <a href="/edit/<%= post.id %>"
+                                                                class="btn btn-primary mx-2 btn-sm">Edit</a>
+                                                            <button onclick="deletePost('<%= post.id %>')"
+                                                                class="btn btn-danger btn-sm">Delete</button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <% }); %>
+                                                <% } else { %>
+                                                    <p>No posts available.</p>
+                                                    <% } %>
         </div>
     </main>
     <%- include('./partials/footer.ejs') %>
+        <script>
+            function deletePost(postid) {
+                if (confirm('Are you sure you want to delete this post?')) {
+                    fetch(`/post/${postid}`, { method: 'DELETE' })
+                        .then(response => {
+                            if (response.ok) {
+                                window.location.href = '/';
+                            } else {
+                                alert("Failed to delete");
+                            }
+                        })
+                        .catch(error => {
+                            console.error('Error:', error);
+                            alert("Failed to delete");
+                        });
+                }
+            }
+        </script>
